--- a/mvi/src/main/res/layout/question_fragment.xml
+++ b/mvi/src/main/res/layout/question_fragment.xml
@@ -25,9 +25,8 @@
             android:id="@+id/question"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="270dp"
+            android:layout_marginTop="50dp"
             android:text="@{config.question.value}"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
