--- a/mvi/src/main/res/layout/welcome_fragment.xml
+++ b/mvi/src/main/res/layout/welcome_fragment.xml
@@ -45,7 +45,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:textAllCaps="false"
             android:onClick="@{config.onStartClick}"
+            android:textSize="@dimen/pizza_button_text_size"
             android:text="Start"
             android:visibility="@{config.welcomeVisibility, default=gone}"
             app:layout_constraintBottom_toBottomOf="parent"
