--- a/mvi/src/main/res/layout/welcome_fragment.xml
+++ b/mvi/src/main/res/layout/welcome_fragment.xml
@@ -5,15 +5,15 @@
 
     <data>
 
-        <import type="com.goofy.goober.ui.fragment.WelcomeFragment.Config" />
+        <import type="com.goofy.goober.ui.fragment.WelcomeFragment.ViewConfig" />
 
         <import type="androidx.lifecycle.LiveData" />
 
         <import type="android.view.View" />
 
         <variable
-            name="config"
-            type="LiveData&lt;Config>" />
+            name="viewConfig"
+            type="LiveData&lt;ViewConfig>" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -27,7 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Loading..."
-            android:visibility="@{config.progressVisibility, default=visible}"
+            android:visibility="@{viewConfig.progressVisibility, default=visible}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -36,7 +36,7 @@
         <ProgressBar
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:visibility="@{config.progressVisibility, default=visible}"
+            android:visibility="@{viewConfig.progressVisibility, default=visible}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/loadingText" />
@@ -46,10 +46,10 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:textAllCaps="false"
-            android:onClick="@{config.onStartClick}"
+            android:onClick="@{viewConfig.onStartClick}"
             android:textSize="@dimen/pizza_button_text_size"
             android:text="Start"
-            android:visibility="@{config.welcomeVisibility, default=gone}"
+            android:visibility="@{viewConfig.welcomeVisibility, default=gone}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
