--- a/mvijetpackcompose/src/main/res/values/colors.xml
+++ b/mvijetpackcompose/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="blueViolet">#ff8A2BE2</color>
+    <color name="darkBlueGrey">#ff1e1e2f</color>
+    <color name="darkMagenta">#ff8B008B</color>
+    <color name="indigo">#ff4B0082</color>
+    <color name="mediumPurple">#ff9370DB</color>
 </resources>
