--- a/mvijetpackcompose/src/main/res/values/styles.xml
+++ b/mvijetpackcompose/src/main/res/values/styles.xml
@@ -1,11 +1,9 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+    <style name="Theme.Pizza" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorPrimary">@color/blueViolet</item>
+        <item name="colorPrimaryDark">@color/darkBlueGrey</item>
+        <item name="colorAccent">@color/mediumPurple</item>
+        <item name="android:statusBarColor">@color/darkMagenta</item>
     </style>
-
 </resources>
