--- a/mvi/src/main/res/layout/question_fragment.xml
+++ b/mvi/src/main/res/layout/question_fragment.xml
@@ -6,13 +6,13 @@
 
     <data>
 
-        <import type="com.goofy.goober.ui.fragment.QuestionFragment.ViewConfig" />
+        <import type="com.goofy.goober.ui.view.QuestionView" />
 
         <import type="androidx.lifecycle.LiveData" />
 
         <variable
-            name="viewConfig"
-            type="LiveData&lt;ViewConfig>" />
+            name="questionViewState"
+            type="LiveData&lt;QuestionView.State>" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -26,12 +26,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
-            android:text="@{viewConfig.question.value}"
+            android:text="@{questionViewState.question.value}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <LinearLayout
+        <com.goofy.goober.ui.view.QuestionView
             android:id="@+id/options"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -40,7 +40,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/question"
-            app:options="@{viewConfig}" />
+            app:state="@{questionViewState}" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
